# experiment-toml-deps-checker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  check-dependencies.sh  pyproject.toml  version-stats.py
.claude/: settings.json
.claude/agents/: housekeeper.md  test-runner.md
.claude/hooks/: pre-commit-guard.py
.claude/skills/analyze-freeze/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING-AI.md  jtbd.md  roadmap.md
docs/adr/: 0001-python-over-bash.md  0002-markdown-as-canonical-output-format.md  0003-bundled-plus-remote-deprecation-kb.md  0004-risk-score-opt-in-with-disclaimer.md  0005-language-convention-english-in-repo.md  0006-pragmatic-clean-architecture.md  0007-tooling-stack.md  0008-json-schema-semver.md  0009-tracer-bullets-and-spikes.md  0010-analytics-stack-duckdb.md  README.md
docs/diagrams/: README.md
docs/proposals/: 0001-cve-scan.md  0002-play-store-compliance.md  0003-freeze-diff.md  0004-changelog-scraper.md  0005-toolchain-compatibility-matrix.md  0006-library-health-and-deprecation.md  0007-module-usage-map.md  0008-risk-score.md  0009-license-audit.md  0010-html-export.md  0011-catalog-health-audit.md  0012-layered-configuration.md  0013-version-status-first-class.md  0014-maven-bom-support.md  0015-compliance-per-library-attribution.md  0016-unified-report-style.md  0017-csv-export.md  0018-ci-gatekeeper.md  0019-module-scanner.md  0020-rich-versions.md  0021-user-guide.md  0022-module-scanner-accessor-coverage.md  0023-license-classpath-exception.md  0024-async-scanners-scraper-observability.md  0025-parallel-use-case-orchestration.md  0026-pre-1-0-stability-tier.md  0027-version-registry-stability-gate.md  0028-phase6-wrap-up-empty-sections-and-console-buckets.md  0029-cache-controls.md  0030-http-resilience.md  0031-bootstrap-composition-tests.md  0032-atomic-writes.md  0033-analyze-freeze-skill.md  0034-output-slack-opt-in.md  README.md
docs/user-guide/: analyzing-a-freeze-report.md  ci-integration.md  configuration.md  features.md  getting-started.md  index.md  troubleshooting.md
src/gradle_deps_monitor/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py
src/gradle_deps_monitor/application/: __init__.py  bom_enrichment.py  compute_freeze_diff.py  compute_risk_score.py  evaluate_policy.py  generate_freeze_report.py
src/gradle_deps_monitor/application/ports/: __init__.py  bom_resolver.py  catalog_parser.py  changelog_fetcher.py  compliance_checker.py  diff_writer.py  health_checker.py  library_health_checker.py  license_checker.py  module_usage_scanner.py  report_writer.py  snapshot_loader.py  toolchain_checker.py  (+3 more)
src/gradle_deps_monitor/checks/: __init__.py  runner.py
src/gradle_deps_monitor/data/: library_health_kb.yaml  play_store_compliance.yaml
src/gradle_deps_monitor/domain/: __init__.py  advisory.py  bom.py  catalog.py  changelog.py  compliance.py  config.py  diff.py  finding.py  library_health.py  license.py  module_usage.py  policy.py  report.py  rich_version.py  risk_score.py  severity.py  severity_style.py  toolchain.py  version.py  version_status.py
src/gradle_deps_monitor/infrastructure/: __init__.py
src/gradle_deps_monitor/presentation/: __init__.py  console.py  policy_output.py  severity_style.py
tests/: test_bootstrap.py
tests/application/: test_bom_enrichment.py  test_compute_freeze_diff.py  test_compute_risk_score.py  test_evaluate_policy.py  test_generate_freeze_report.py
tests/checks/: test_runner.py
tests/checks/catalog_health/: test_rules.py
tests/domain/: test_advisory.py  test_bom.py  test_catalog.py  test_changelog.py  test_compliance.py  test_config.py  test_diff.py  test_finding.py  test_library_health.py  test_license.py  test_maven_version.py  test_module_usage.py  test_policy.py  test_rich_version.py  test_risk_score.py  test_severity.py  test_severity_style.py  test_toolchain.py  test_version_status.py
tests/fixtures/: large_project_generator.py
tests/fixtures/rich_versions/: libs.versions.toml
tests/infrastructure/cache/: test_cache_paths.py
tests/infrastructure/checkers/: test_library_health_checker.py  test_play_store_compliance_checker.py  test_pom_license_checker.py  test_toolchain_compatibility_checker.py
tests/infrastructure/config/: test_loader.py
tests/infrastructure/fetchers/: test_changelog_fetcher.py
tests/infrastructure/loaders/: test_json_snapshot_loader.py
tests/infrastructure/parsing/: test_rich_versions.py  test_toml_catalog_parser.py
tests/infrastructure/registries/: test_registries.py
tests/infrastructure/resolvers/: test_maven_bom_resolver.py  test_maven_version_status_resolver.py
tests/infrastructure/scanners/: test_composite_scanner.py  test_github_advisory_scanner.py  test_gradle_module_scanner.py  test_gradle_module_scanner_bench.py  test_oss_index_scanner.py
tests/infrastructure/writers/: test_atomic.py  test_diff_writers.py  test_findings_csv_writer.py  test_inventory_csv_writer.py  test_severity_unification.py  test_slack_writer.py  test_writers.py
tests/presentation/: test_cli_check.py  test_cli_diff.py  test_cli_smoke.py  test_console_buckets.py  test_policy_output.py  test_severity_style.py
tests/presentation/commands/: test_check_command.py  test_diff_command.py
tools/analytics/: README.md  render.py  runner.py  schema.sql
tools/analytics/queries/: 01_top_risk.sql  02_drift_by_severity.sql  03_compound_security_duplicates.sql  04_unstable_prerelease_in_prod.sql  05_inactive_or_unhealthy.sql  06_license_risk.sql  07_finding_severity_breakdown.sql  08_bom_coverage.sql  INDEX.md
(+56 files in other folders)
